--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
+    "@material-tailwind/react": "^2.1.10",
     "@tailwindcss/forms": "^0.5.7",
     "chart.js": "^4.4.5",
     "chartjs-adapter-moment": "^1.0.1",
