--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
+    "@react-oauth/google": "^0.12.1",
     "@tailwindcss/forms": "^0.5.7",
     "chart.js": "^4.4.5",
     "chartjs-adapter-moment": "^1.0.1",
+    "firebase": "^11.0.1",
     "heroicons": "^2.1.5",
     "moment": "^2.29.4",
     "react": "^18.2.0",
