--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-flatpickr": "^3.10.13",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.20.1",
+    "react-toastify": "^10.0.6",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
